test_suite/tests/compile_fail/with_attr_custom.rs

#[derive(serde_unstructured::SerdeView)]
struct Data {
    #[serde_view(with = "path")]
    field: u8,
}

fn main() {}